// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentCard stories snapshot > CustomClassNames story renders and matches snapshot 1`] = `
<div>
  <div
    class="text-card-foreground flex gap-6 rounded-xl border py-6 shadow-sm relative h-full overflow-hidden ring-secondary/40 bg-muted/50 flex-row"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden rounded-none bg-secondary/20"
      >
        <img
          alt="Custom class names"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex justify-end p-6 md:p-8 flex-row items-center"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex flex-col justify-end flex-none"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                This example applies custom classes to the footer, description, and button.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Custom Class Names
              </h3>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 text-sm font-medium leading-5 text-primary-foreground w-fit"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/details"
            >
              View Details
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm relative h-full overflow-hidden ring-secondary/40 bg-muted/50"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden rounded-none bg-secondary/20"
      >
        <img
          alt="Featured Product"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex flex-col justify-end p-6 md:p-8"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex-1 flex flex-col justify-end"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                Discover our latest collection of premium products designed for modern living.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Featured Product
              </h3>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-fit text-sm font-medium leading-5 text-primary-foreground"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/category/featured"
            >
              Shop Now
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard stories snapshot > Minimal story renders and matches snapshot 1`] = `
<div>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm relative h-full overflow-hidden ring-secondary/40 bg-muted/50"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden rounded-none bg-secondary/20"
      >
        <img
          alt="Minimal card"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex flex-col justify-end p-6 md:p-8"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex-1 flex flex-col justify-end"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                A simple card with image and text overlay.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Minimal Card
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard stories snapshot > NoBackground story renders and matches snapshot 1`] = `
<div>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-xl py-6 relative h-full overflow-hidden bg-transparent border-0 shadow-none"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden rounded-none bg-secondary/20"
      >
        <img
          alt="Transparent card"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex flex-col justify-end p-6 md:p-8"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex-1 flex flex-col justify-end"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                This card has no background or border for a cleaner look.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Transparent Card
              </h3>
            </div>
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 aria-invalid:border-destructive bg-primary hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 w-fit text-sm font-medium leading-5 text-primary-foreground"
              data-size="default"
              data-slot="button"
              data-variant="default"
              href="/explore"
            >
              Explore
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard stories snapshot > WithoutButton story renders and matches snapshot 1`] = `
<div>
  <div
    class="text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm relative h-full overflow-hidden ring-secondary/40 bg-muted/50"
    data-slot="card"
  >
    <div
      class="p-0"
      data-slot="card-content"
    >
      <div
        class="relative aspect-[4/3] overflow-hidden rounded-none bg-secondary/20"
      >
        <img
          alt="Text only card"
          class="w-full h-full object-cover"
          loading="lazy"
          src="https://via.placeholder.com/400x300"
          style="object-position: 50% 50%;"
        />
        <div
          class="absolute inset-0 flex flex-col justify-end p-6 md:p-8"
        >
          <div
            class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent -z-10"
          />
          <div
            class="relative z-10"
          >
            <div
              class="flex-1 flex flex-col justify-end"
            >
              <p
                class="text-sm font-normal leading-5 text-muted mb-2 whitespace-pre-line"
              >
                This card has an image with text overlay but no button.
              </p>
              <h3
                class="text-2xl font-semibold leading-[120%] tracking-[-0.6px] text-card mb-4"
              >
                Text Only Card
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
